# instagram-follow-cli

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/instagram_follow_cli/: __init__.py  cli.py  compare.py  instagram_api.py  instagram_export.py
tests/: test_cli.py  test_compare.py
