[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instagram-follow-cli"
version = "0.1.0"
description = "CLI cross-platform per confrontare follower e following di Instagram tramite API ufficiali"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Danilo Scimone"}
]
keywords = ["instagram", "cli", "followers", "following", "api"]
dependencies = [
  "rich>=13.7,<15",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
]

[project.scripts]
instagram-follow-cli = "instagram_follow_cli.cli:main"

[project.urls]
Homepage = "https://github.com/daniloscimone/instagram-follow-cli"
Repository = "https://github.com/daniloscimone/instagram-follow-cli"
Issues = "https://github.com/daniloscimone/instagram-follow-cli/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
